required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (SVN trunk):
----------------------------

- maputil.c: Correct expression evaluation with text containing apostrophes (#2641)

- mapwfs.c: Genrate possibly an error message when applying filter encoding (#2444)

- Added MS_LABEL_BINDING constants for SWIG MapScript (#2643)

- mapogcsos.c: fix POST support (#2379)

- maplibxml2.c: helper functions XML POST fix (#2379)

- mapwfs.c: fix segfault when srsName is not passed on BBOX Filter (#2644)

- mapwfs.c: do not return error for empty query results (#2444)

- Remove C++-style comments and most other warnings thrown by -pedantic (#2598)

- mapwfs.c/mapwfs11.c: set GML MIME type correctly

- mapogcsos.c: advertise supported SRS list via
  MAP.WEB.METADATA.sos_srs (#2414)

- mapwfs.c: set layer extent to map extent for default
  GetFeature requests with no spatial predicates (#1287)

Version 5.2.0-beta1 (2008-06-11):
---------------------------------

- WMS/WFS layers can now specify a proxy servert (#571)

- mapwmslayer.c: set QUERY_LAYERS correctly (#2001)

- mapwcs.c: handle PARAMETER values correctly (#2509)

- SOS: fix various memory leaks (#2412)

- mapwcs.c: advertise temporal support in GetCapabilities (#2487)

- Fixed flaw in findTag() in maptemplate.c that prevented multiple tags 
  on the same line being processed under certain conditions. (#2633)

- Return results even when extents are missing (#2420)

- Avoid displaying OGR connection strings in error messages (#2629)

- WCS: respect wcs_name metadata for GetCoverage and DescribeCoverage 
  requests (#2036)

- CGI: added -nh option to allow for the suppression of content headers from
  the command line (#2594)
