@@ -13,6 +13,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- mapstring.c: possible buffer overflow in msGetPath (#2649)
+
 - maputil.c: Correct expression evaluation with text containing apostrophes (#2641)
 
 - mapwfs.c: Genrate possibly an error message when applying filter encoding (#2444)
